--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <html>
 	<head>
+		<meta charset="utf-8">
 		<link rel="stylesheet" href="style.css">
+		<script src="angular.min.js"></script>
+		<script src="angular-sanitize.js"></script>
+		<script src="prog.js"></script>
 	</head>
 	
 	<body>
 		<h1>Le Jeu Des Fous</h1>
 		
 		<!--Ceci represente l'ecran de notre jeu-->
-		<div class="ecran">
+		<div class="ecran" ng-app="myApp"  ng-controller="choix">
 		
 			<!--Ici s'affichera les defi-->
-			<div class = "affText">
-			
+			<div class = "affText" ng-bind-html="question">
+			{{2+1}}
 			</div>
 			
 			<!--Ici, on propose 9boutons a l'utilisateur-->
 			<div class="choixBouton">
-				<input type="button" value="1" class="bouton"> <input type="button" value="2" class="bouton"> <input type="button" value="3" class="bouton"> 
-				<input type="button" value="4" class="bouton"> <input type="button" value="5" class="bouton"> <input type="button" value="6" class="bouton"> 
-				<input type="button" value="7" class="bouton"> <input type="button" value="8" class="bouton"> <input type="button" value="9" class="bouton"> 
+				<input type="button" value="1" class="bouton" ng-click="aff(1)">
+				<input type="button" value="2" class="bouton" ng-click="aff(2)"> 
+				<input type="button" value="3" class="bouton" ng-click="aff(3)"> 
+				<input type="button" value="4" class="bouton" ng-click="aff(4)"> 
+				<input type="button" value="5" class="bouton" ng-click="aff(5)"> 
+				<input type="button" value="6" class="bouton" ng-click="aff(6)"> 
+				<input type="button" value="7" class="bouton" ng-click="aff(7)"> 
+				<input type="button" value="8" class="bouton" ng-click="aff(8)"> 
+				<input type="button" value="9" class="bouton" ng-click="aff(9)"> 
 			</div>		
 		</div>
 	</body>
