--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 			<!--Ici s'affichera les defi-->
 			<div class = "affText" ng-bind-html="question">
-			{{2+1}}
+			{{"erreur"}}
 			</div>
 			
 			<!--Ici, on propose 9boutons a l'utilisateur-->
