ajout d un compteur

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
 				<input type="button" value="7" class="bouton" ng-click="aff(7)"> 
 				<input type="button" value="8" class="bouton" ng-click="aff(8)"> 
 				<input type="button" value="9" class="bouton" ng-click="aff(9)"> 
-			</div>		
+			</div>
+			
+			<!--Bas d'ecran-->
+			<div class="foot" ng-bind-html="questRest">
+			</div>
+			
 		</div>
 	</body>
 </html>
